исправил параллельный запуск тестов